# glfx

./: CMakeLists.txt  README.md  vcpkg.json
include/gl/: glfx.h
src/: CMakeLists.txt  glfx.cpp  glfxConfig.cmake.in  glfxLALRParser.cpp
