cmake_minimum_required(VERSION 3.16.0)
project(glfx)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
set(CMAKE_DEBUG_POSTFIX "d")

set(GLFX_VERSION 0.7.5)

SET(PKGCONFIG_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig/" CACHE STRING "Base directory for pkgconfig files")
IF(NOT WIN32)
    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/glfx.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/glfx.pc @ONLY)
    INSTALL( FILES ${CMAKE_CURRENT_BINARY_DIR}/glfx.pc DESTINATION ${PKGCONFIG_INSTALL_PREFIX})
ENDIF(NOT WIN32)

add_subdirectory(src)
